changed a few measurements from px to rem, trying to figure out if a mobile layout problem is a browser sync issue

--- a/styles/_nav.css
+++ b/styles/_nav.css
@@ -41,7 +41,7 @@
 }
 
 .nav__title__img-banner {
-	width: 100px;
+	width: 8.25rem;
 }
 
 .nav__lower-bar {
